tests/PhiCore/compile_failure/src/core/non_copyable/copy_construct.fail.cpp
#include <phi/core/NonCopyable.hpp>

class A : phi::NonCopyable
{};

int main()
{
    A a;

    A b(a);
}
